fixed news blockquote spacing

--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -50,8 +50,11 @@ article.article {
             * {
                 color: $main-color;
             }
-            p:not(:last-child) {
+            p {
                 margin: 0px;
+            }
+            p:not(:first-child) {
+                margin-top: 20px;
             }
         }
     }
